<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/image_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#111111">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#111111">

        <TextView
            android:id="@+id/backButton3"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/backButton"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/nuiSelect"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="16dp"
        android:background="#111111"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/saki_nui"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/saki_nui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/saki_nui" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/tema_nui"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/tema_nui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/tema_nui" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/koto_nui"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/koto_nui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/koto_nui" />
        </LinearLayout>
    </GridLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="16dp"
        android:background="#111111"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/tina_nui"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/tina_nui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/tina_nui" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/hiro_nui"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/hiro_nui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/hiro_nui" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/misu_nui"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/misu_nui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/misu_nui" />
        </LinearLayout>
    </GridLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444"/>

    <TextView
        android:id="@+id/default_ccp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/defaultBackButton"/>
    <TextView
        android:id="@+id/default_goalflag"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/defaultBackButton"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444"/>
</LinearLayout>
